# 2ch

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/db/: alembic.ini
backend/db/development/: env.py
backend/db/development/versions/: 01ebf7c76099_revase.py  0668d8adb192_revase.py  07e3c5812824_first_migration.py  2b6ed362358d_create_tables.py  2f59cc60035f_create_tables.py  626d05cf432c_test.py  675864fb0f6f_your_message_here.py  8c64634b72f6_revase.py  c41607d16d2c_test.py  db3ddf02da9c_initial.py  e0a9ee341ad3_revase.py
backend/db/init/: 1_create_databases.sql
frontend/: .eslintrc.cjs  .prettierrc.json  Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: Button.tsx  CreatePost.tsx  CreateThread.tsx  DateTimeDisplay.tsx  Header.tsx  Input.tsx  MultiLineText.tsx  PostItem.tsx  PostList.tsx  TextArea.tsx  ThreadItem.tsx  ThreadList.tsx
frontend/src/routes/: Home.tsx  ThreadPage.tsx
