[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Shohei Ohno <43416072+shohey4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
pylint = "^3.0.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
